--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ dependencies {
             "com.opencsv:opencsv:5.9",
             "commons-io:commons-io:2.16.1",
             "org.assertj:assertj-core:3.26.3",
-            "com.fasterxml.jackson.core:jackson-core:2.17.2",
+            "com.fasterxml.jackson.core:jackson-core:2.17.2"
+
 
     )
 }
